--- a/Back/DockerFile
+++ b/Back/DockerFile
@@ -3,4 +3,4 @@ WORKDIR /back
 COPY ./requirements.txt /back/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /back/requirements.txt
 COPY . /back
-CMD {'uvicorn', 'main:app', '--host', 'localhost','--port', '8000'}
+CMD [ "uvicorn", "main:app", "--host", "0.0.0.0","--port", "8000" ]
